# qqbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.cpp  qqbot.kdev4
cmake/: FindEV.cmake  FindEVENT.cmake
irc/: irc.cpp  irc.h
libev/: CMakeLists.txt
libevent/: CMakeLists.txt
libirc/: CMakeLists.txt  irc.cpp  irc.h  test.cpp
libwebqq/: CMakeLists.txt  defer.cpp  defer.hpp  json.c  logger.c  logger.cpp  logger.h  md5.c  md5.h  queue.h  test.cpp  type.cpp  url.cpp  url.hpp  webqq.cpp  webqq.h  webqq_impl.cpp  webqq_impl.h
libwebqq/urdl/: CMakeLists.txt
libwebqq/urdl/doc/html/urdl/: planned_features.html  prerequisites.html  rationale.html  reference.html
libwebqq/urdl/doc/html/urdl/getting_started/: checking_for_errors.html  downloading_a_file_using_an_istream.html  grouping_and_reusing_options.html  integrating_with_boost_asio.html
libwebqq/urdl/doc/html/urdl/reference/: opt.html
libwebqq/urdl/doc/html/urdl/reference/core/: istream.html  read_stream.html  url.html
libwebqq/urdl/doc/html/urdl/reference/core/istream/: content_length.html  error.html  get_option.html  get_options.html  is_open.html  open.html  open_timeout.html  rdbuf.html  read_timeout.html  set_options.html
libwebqq/urdl/doc/html/urdl/reference/core/istreambuf/: content_length.html  content_type.html  read_timeout.html  set_option.html
libwebqq/urdl/doc/html/urdl/reference/core/istreambuf/open_timeout/: overload1.html  overload2.html
libwebqq/urdl/doc/html/urdl/reference/core/option_set/: _option_set.html  clear_option.html  get_option.html  operator_eq_.html  option_set.html  set_option.html  set_options.html
libwebqq/urdl/doc/html/urdl/reference/core/option_set/option_set/: overload1.html
libwebqq/urdl/doc/html/urdl/reference/core/read_stream/: content_length.html  content_type.html  headers.html  open.html  read_some.html  read_stream.html  set_option.html
libwebqq/urdl/doc/html/urdl/reference/core/read_stream/close/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/core/read_stream/open/: overload1.html  overload2.html
libwebqq/urdl/doc/html/urdl/reference/core/url/: components_type.html  fragment.html  from_string.html  host.html  operator_not__eq_.html  port.html  user_info.html
libwebqq/urdl/doc/html/urdl/reference/core/url/from_string/: overload1.html  overload2.html  overload4.html
libwebqq/urdl/doc/html/urdl/reference/core/url/url/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/err/: http__error_category.html
libwebqq/urdl/doc/html/urdl/reference/opt/: http__max_redirects.html  http__request_content.html  http__request_method.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__max_redirects/: max_redirects.html  value.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__max_redirects/max_redirects/: overload1.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__max_redirects/value/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_content/: value.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_content/value/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_content_type/: request_content_type.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_content_type/request_content_type/: overload1.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_content_type/value/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_method/: request_method.html  value.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__request_method/value/: overload2.html
libwebqq/urdl/doc/html/urdl/reference/opt/http__user_agent/user_agent/: overload2.html
libwebqq/urdl/include/urdl/detail/: http_read_stream.hpp
urdl/: CMakeLists.txt
urdl/doc/html/: index.html  standalone_HTML.manifest
urdl/doc/html/urdl/: features.html  getting_started.html  index.html  platforms.html
urdl/doc/html/urdl/getting_started/: building.html  parsing_urls.html  setting_options_to_perform_an_http_post.html  specifying_timeouts.html
urdl/doc/html/urdl/reference/: core.html  err.html
urdl/doc/html/urdl/reference/core/: istreambuf.html  option_set.html
urdl/doc/html/urdl/reference/core/istream/: close.html  content_type.html  headers.html  istream.html  set_option.html
urdl/doc/html/urdl/reference/core/istreambuf/: _istreambuf.html  close.html  error.html  get_option.html  get_options.html  headers.html  is_open.html  istreambuf.html  open.html  open_timeout.html  puberror.html  set_options.html  underflow.html
urdl/doc/html/urdl/reference/err/: http__errc__errc_t.html  http__errc__make_error_code.html
urdl/doc/html/urdl/reference/opt/: http__request_content_type.html  http__user_agent.html
urdl/include/urdl/: http.hpp  read_stream.hpp
urdl/include/urdl/detail/: http_read_stream.hpp
utf8/: utf8.h
zlib/: CMakeLists.txt
(+48 files in other folders)
